y.output
Grammar

    0 $accept: stms $end

    1 stms: COMMENT body

    2 body: def_func body
    3     | def_func

    4 def_func: VOID DEFAULT_FUNC '(' ')' '{' func_body '}'

    5 func_body: action_cmd func_body
    6          | action_cmd

    7 action_cmd: pinMode

    8 pinMode: PINMODE '(' NUM ',' MODE ')' ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 8
')' (41) 4 8
',' (44) 8
';' (59) 8
'{' (123) 4
'}' (125) 4
error (256)
COMMENT (258) 1
DEFAULT_FUNC (259) 4
VOID (260) 4
PINMODE (261) 8
MODE (262) 8
NUM (263) 8


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
stms (16)
    on left: 1, on right: 0
body (17)
    on left: 2 3, on right: 1 2
def_func (18)
    on left: 4, on right: 2 3
func_body (19)
    on left: 5 6, on right: 4 5
action_cmd (20)
    on left: 7, on right: 5 6
pinMode (21)
    on left: 8, on right: 7


state 0

    0 $accept: . stms $end

    COMMENT  shift, and go to state 1

    stms  go to state 2


state 1

    1 stms: COMMENT . body

    VOID  shift, and go to state 3

    body      go to state 4
    def_func  go to state 5


state 2

    0 $accept: stms . $end

    $end  shift, and go to state 6


state 3

    4 def_func: VOID . DEFAULT_FUNC '(' ')' '{' func_body '}'

    DEFAULT_FUNC  shift, and go to state 7


state 4

    1 stms: COMMENT body .

    $default  reduce using rule 1 (stms)


state 5

    2 body: def_func . body
    3     | def_func .

    VOID  shift, and go to state 3

    $default  reduce using rule 3 (body)

    body      go to state 8
    def_func  go to state 5


state 6

    0 $accept: stms $end .

    $default  accept


state 7

    4 def_func: VOID DEFAULT_FUNC . '(' ')' '{' func_body '}'

    '('  shift, and go to state 9


state 8

    2 body: def_func body .

    $default  reduce using rule 2 (body)


state 9

    4 def_func: VOID DEFAULT_FUNC '(' . ')' '{' func_body '}'

    ')'  shift, and go to state 10


state 10

    4 def_func: VOID DEFAULT_FUNC '(' ')' . '{' func_body '}'

    '{'  shift, and go to state 11


state 11

    4 def_func: VOID DEFAULT_FUNC '(' ')' '{' . func_body '}'

    PINMODE  shift, and go to state 12

    func_body   go to state 13
    action_cmd  go to state 14
    pinMode     go to state 15


state 12

    8 pinMode: PINMODE . '(' NUM ',' MODE ')' ';'

    '('  shift, and go to state 16


state 13

    4 def_func: VOID DEFAULT_FUNC '(' ')' '{' func_body . '}'

    '}'  shift, and go to state 17


state 14

    5 func_body: action_cmd . func_body
    6          | action_cmd .

    PINMODE  shift, and go to state 12

    $default  reduce using rule 6 (func_body)

    func_body   go to state 18
    action_cmd  go to state 14
    pinMode     go to state 15


state 15

    7 action_cmd: pinMode .

    $default  reduce using rule 7 (action_cmd)


state 16

    8 pinMode: PINMODE '(' . NUM ',' MODE ')' ';'

    NUM  shift, and go to state 19


state 17

    4 def_func: VOID DEFAULT_FUNC '(' ')' '{' func_body '}' .

    $default  reduce using rule 4 (def_func)


state 18

    5 func_body: action_cmd func_body .

    $default  reduce using rule 5 (func_body)


state 19

    8 pinMode: PINMODE '(' NUM . ',' MODE ')' ';'

    ','  shift, and go to state 20


state 20

    8 pinMode: PINMODE '(' NUM ',' . MODE ')' ';'

    MODE  shift, and go to state 21


state 21

    8 pinMode: PINMODE '(' NUM ',' MODE . ')' ';'

    ')'  shift, and go to state 22


state 22

    8 pinMode: PINMODE '(' NUM ',' MODE ')' . ';'

    ';'  shift, and go to state 23


state 23

    8 pinMode: PINMODE '(' NUM ',' MODE ')' ';' .

    $default  reduce using rule 8 (pinMode)
